tests/ui/auto-traits/ungated-impl.stderr
error[E0658]: auto traits are experimental and possibly buggy
  --> $DIR/ungated-impl.rs:1:1
   |
LL | auto trait MyTrait {}
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #13231 <https://github.com/rust-lang/rust/issues/13231> for more information
   = help: add `#![feature(auto_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: negative trait bounds are not fully implemented; use marker types for now
  --> $DIR/ungated-impl.rs:4:9
   |
LL | impl<T> !MyTrait for *mut T {}
   |         ^^^^^^^^
   |
   = note: see issue #68318 <https://github.com/rust-lang/rust/issues/68318> for more information
   = help: add `#![feature(negative_impls)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
